gccida/g2/build_complex_type
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/build_complex_type/src/tree.c:4555:22: error: use of undeclared identifier 'unk_7059BA'
v8 = ( const char *)&unk_7059BA; 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/build_complex_type/src/tree.c:4560:22: error: use of undeclared identifier 'unk_7059CE'
v8 = ( const char *)&unk_7059CE; 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/build_complex_type/src/tree.c:4565:22: error: use of undeclared identifier 'unk_7059E4'
v8 = ( const char *)&unk_7059E4; 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/build_complex_type/src/tree.c:4570:22: error: use of undeclared identifier 'unk_7059F6'
v8 = ( const char *)&unk_7059F6; 
                     ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/build_complex_type/src/obj/tree.o] Error 1
